--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+allure-results
+test-output
+screenshots
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
